# aruco_marker_detection

./: CMakeLists.txt
include/: aruco_functions.h
src/: aruco_functions.cpp  main.cpp
